--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -166,11 +166,11 @@
 		</dependency>
 
 		<dependency>
-			<groupId>jsoup</groupId>
+			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.6</version>
+			<version>1.6.3</version>
 		</dependency>
-
+		
 		<!-- Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
